--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,9 @@
 :root {
-  --color-primario: #004aad;
-  --color-secundario: #f4f4f4;
-  --color-acento: #ffc107;
-  --color-texto: #333;
+  --primary: #004aad;
+  --secondary: #f4f4f4;
+  --accent: #ffc107;
+  --dark: #333;
+  --header-height: 4rem;
 }
 
 * {
@@ -12,76 +13,242 @@
   outline: 1px solid rgba(189, 0, 0, 0.486);
 }
 
+/* FONTS */
+
+@font-face {
+  font-family: "montserrat-extrabold";
+  src: url("../assets/fonts/Montserrat-ExtraBold.ttf");
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: "montserrat-bold";
+  src: url("../assets/fonts/Montserrat-Bold.ttf");
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: "montserrat-semibold";
+  src: url("../assets/fonts/Montserrat-SemiBold.ttf");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "montserrat-medium";
+  src: url("../assets/fonts/Montserrat-Medium.ttf");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "montserrat";
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "montserrat-light";
+  src: url("../assets/fonts/Montserrat-Light.ttf");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "montserrat-extralight";
+  src: url("../assets/fonts/Montserrat-ExtraLight.ttf");
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: "montserrat-thin";
+  src: url("../assets/fonts/Montserrat-Thin.ttf");
+  font-weight: 100;
+}
+
+/* HTML Defaults */
+
+html,
+body {
+  overflow-x: hidden;
+  background-color: var(--secondary);
+  font-family: "montserrat", sans-serif;
+  color: var(--dark);
+  font-size: 1rem;
+  line-height: 1.5;
+}
+input,
+form,
+button select {
+  display: block;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="tel"],
+select {
+  min-height: 2.5rem;
+  display: block;
+  border: 1px solid #33333365;
+  border-radius: 2px;
+  font-size: 1rem;
+  font-family: "montserrat", sans-serif;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+input[type="range"] {
+  accent-color: var(--primary);
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
 ul {
   list-style: none;
 }
 
-body {
-  font-family: "Segoe UI", sans-serif;
-  background-color: var(--color-secundario);
-  color: var(--color-texto);
-  line-height: 1.6;
+a {
+  text-decoration: none;
 }
 
-div#content {
-  & > main {
-    margin: 0 auto;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 1.25rem;
+}
+
+/* UI */
+
+.col-12 {
+  width: 100%;
+  max-width: 100%;
+}
+.col-11 {
+  width: 100%;
+  max-width: 91.6666%;
+}
+.col-10 {
+  width: 100%;
+  max-width: 83.3336%;
+}
+.col-9 {
+  width: 100%;
+  max-width: 75%;
+}
+.col-8 {
+  width: 100%;
+  max-width: 66.6666%;
+}
+.col-7 {
+  width: 100%;
+  max-width: 58.3333%;
+}
+.col-6 {
+  width: 100%;
+  max-width: 50%;
+}
+.col-5 {
+  width: 100%;
+  max-width: 41.6666%;
+}
+.col-4 {
+  width: 100%;
+  max-width: 33.3333%;
+}
+.col-3 {
+  width: 100%;
+  max-width: 25%;
+}
+.col-2 {
+  width: 100%;
+  max-width: 16.6666%;
+}
+.col-1 {
+  width: 100%;
+  max-width: 8.3333%;
+}
+
+.centered {
+  margin: 0 auto;
+}
+
+.container {
+  width: 100vw;
+
+  & .section-spaced {
     padding: 2rem 0;
   }
 }
 
+.section-container {
+  width: 100%;
+  display: block;
+  max-width: 64rem;
+  margin: 2rem auto;
+}
+
+.fullscreen {
+  display: block;
+  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
+  height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
+  position: relative;
+}
+
+.hero {
+  height: calc(100vh - var(--header-height)) !important;
+  min-height: calc(100vh - var(--header-height)) !important;
+  max-height: calc(100vh - var(--header-height)) !important;
+}
+
+.place-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* END UI*/
+
 header.navigation-menu {
-  background-color: var(--color-primario);
+  background-color: var(--primary);
   color: white;
-  padding: 1.5rem 1rem;
   text-align: center;
-  & h1 {
-    font-size: 2rem;
-    font-weight: bold;
-  }
+  position: relative;
+  z-index: 10;
+
   & nav ul {
+    height: var(--header-height);
     list-style: none;
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 1rem;
+
     & li {
       margin: 0 1rem;
+
       & a {
+        font-size: 1.25rem;
+        font-weight: 500;
         color: white;
-        text-decoration: none;
-        font-weight: bold;
+        text-transform: uppercase;
       }
     }
   }
 }
 
-main {
-  padding: 2rem 1rem;
-  margin: auto;
-}
-
-section {
-  margin-bottom: 3rem;
-}
-
-.hero {
-  background-color: white;
-  padding: 2rem;
-  border-radius: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  & h2 {
-    font-size: 2rem;
-    color: var(--color-primario);
-  }
-  & p {
-    margin: 1rem 0;
-  }
-}
-
-.btn {
-  background-color: var(--color-acento);
+.button {
+  background-color: var(--accent);
   color: #000;
   padding: 0.75rem 1.5rem;
   border: none;
@@ -101,6 +268,7 @@ section {
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 2rem;
   padding: 1rem 0;
+
   & .blog-post {
     background-color: #f9f9f9;
     border-radius: 0.5rem;
@@ -109,15 +277,18 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
     & h3 {
       margin-top: 0;
       margin-bottom: 0.75rem;
     }
+
     & p {
       flex-grow: 1;
       margin-bottom: 1.25rem;
     }
-    & .btn {
+
+    & .button {
       align-self: flex-start;
       padding: 0.5rem 1rem;
       text-decoration: none;
@@ -125,10 +296,12 @@ section {
       color: white;
       border-radius: 4px;
       transition: background-color 0.3s ease;
+
       &:hover {
         background-color: #0056b3;
       }
     }
+
     & img {
       max-width: 100%;
       border-radius: 8px;
@@ -143,11 +316,13 @@ section {
     display: block;
     margin-bottom: 1rem;
   }
+
   & input {
     padding: 0.5rem;
     width: 100%;
     max-width: 300px;
   }
+
   & p {
     font-weight: bold;
     margin-top: 1rem;
@@ -155,7 +330,7 @@ section {
 }
 
 footer {
-  background-color: var(--color-primario);
+  background-color: var(--primary);
   color: white;
   text-align: center;
   padding: 1rem;
@@ -181,6 +356,7 @@ footer {
   max-width: 360px;
   overflow: hidden;
   border-radius: 1rem;
+
   & img {
     object-fit: cover;
     aspect-ratio: 1;
@@ -205,6 +381,7 @@ footer {
     width: 100vw;
     padding: 2rem 0;
   }
+
   & section.section:nth-child(even) {
     background-color: whitesmoke;
   }
