--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -186,6 +186,13 @@ h6 {
   }
 }
 
+.amount-label {
+  font-size: 1.25rem;
+  font-weight: 800;
+  font-family: "montserrat-semibold", sans-serif;
+  color: var(--dark);
+}
+
 .section-container {
   width: 100%;
   display: block;
@@ -208,6 +215,36 @@ h6 {
   height: calc(100vh - var(--header-height)) !important;
   min-height: calc(100vh - var(--header-height)) !important;
   max-height: calc(100vh - var(--header-height)) !important;
+}
+
+.result-label {
+  text-align: center;
+  min-height: 3rem;
+  max-height: 3rem;
+  border-radius: 2rem;
+  background-color: #4e72e6;
+  border: 3px solid rgb(5, 5, 161);
+  max-width: max-content;
+  padding: 0.5rem 2rem;
+  color: white;
+  font-size: 1.25rem;
+  width: 50%;
+  min-width: 50%;
+  margin: 0 auto;
+  display: block;
+  margin-bottom: 1rem;
+  font-family: "montserrat-medium";
+}
+
+#calculator-form button[type="submit"],
+#calculator-form input#results {
+  border-radius: 2rem;
+  background-color: #4e72e6;
+  border: 3px solid rgb(5, 5, 161);
+  font-family: "montserrat-semibold";
+  & span {
+    font-size: 1rem;
+  }
 }
 
 .place-center {
@@ -388,37 +425,6 @@ footer {
 
   & section.section:nth-child(odd) {
     background-color: white;
-  }
-}
-
-/*BLOG CSS*/
-.blog-container-hero {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 300px);
-  gap: 1rem;
-
-  & article {
-    border-radius: 1rem;
-    box-shadow: 0px 0px 1px 0px #000;
-  }
-
-  & article:nth-child(1) {
-    background-color: blue;
-    grid-column: 1 / 3;
-    grid-row: 1 / 3;
-  }
-
-  & article:nth-child(2) {
-    background-color: red;
-    grid-column: 3 / 5;
-    grid-row: 1 / 2;
-  }
-
-  & article:nth-child(3) {
-    background-color: purple;
-    grid-column: 3 / 5;
-    grid-row: 2 / 3;
   }
 }
 
